...
                android:textColor="@color/pink"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="@color/pink"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- OVERLAY SIDE MENU (buttons float over the photo) -->
    <LinearLayout
        android:id="@+id/sideMenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="?attr/actionBarSize"
        android:background="@color/black"
...
            android:textSize="14sp"
            android:singleLine="true"
            android:padding="4dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnProfileSettings"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="Profile Settings"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:textSize="13sp"
...
            android:textSize="13sp"
            android:singleLine="true"
            android:padding="4dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnHostSession"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="Host a Session"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:singleLine="true"
            android:padding="4dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnJoinSession"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="Join a Session"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:textSize="13sp"
...
            android:textSize="14sp"
            android:singleLine="true"
            android:padding="4dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnDashboard"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="Dashboard"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:textSize="14sp"
...
