...
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/pink"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="Enter username"
            android:background="@drawable/rounded_pink_bg"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
...
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/pink"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="Enter your name"
            android:background="@drawable/rounded_pink_bg"
            android:gravity="center_vertical"
            android:paddingHorizontal="12dp"
...
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/pink"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="name@example.com"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_pink_bg"
            android:gravity="center_vertical"
...
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/pink"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="At least 8 characters"
            android:inputType="textPassword"
            android:background="@drawable/rounded_pink_bg"
            android:gravity="center_vertical"
...
            android:textColorHint="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp" />

        <!-- SIGN UP BUTTON -->
        <Button
            android:id="@+id/btnSignUp"
            android:text="Sign Up"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/pink"
            android:textColor="@color/black"
            android:textAllCaps="false"
...
